# Encryption-and-Licensing

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGES_SEMLA-2020.03.11  Dockerfile  License.txt  NOTICE.md  README.md  ToolSupport.md  conan_build_readme.md  conanfile.py  docker-compose.yaml
.devcontainer/: devcontainer.json
Meetings/: Minutes-2025-03-25.md
doc/: Readme.md  SEMLA.md  SEMLA.plant_uml
scripts/: generate_keys_for_testing.sh
src/: BSD_License.txt  CMakeLists.txt  GenPublicKeyToolH.cmake  GenTestLibraryPackageMoFile.cmake  README  README.md  README_FOLDER_STRUCTURE.txt
src/cmake/: BuildSemlaOpenSSL.cmake  FindSemlaOpenSSL.cmake
src/common/: asprintf.c  asprintf.h  libcrypto-compat.c  libcrypto-compat.h  mlle_error.c  mlle_error.h  mlle_io.c  mlle_io.h  mlle_parse_command.c  mlle_parse_command.h  mlle_portability.h  mlle_protocol.c  mlle_protocol.h  mlle_ssl.c  mlle_ssl.h  mlle_utils.c  mlle_utils.h
src/decryptors/: CMakeLists.txt
src/decryptors/default/src/: CMakeLists.txt  mlle_cr_context.h  mlle_cr_decrypt.c  mlle_cr_encrypt.c
src/decryptors/include/: mlle_cr_decrypt.h  mlle_cr_encrypt.h
src/embedfile/: obfuscate.c  obfuscate_utils.c  obfuscate_utils.h  randomize_key.c
src/encrypt_decrypt/: decrypt_file.c  encrypt_file.c  mlle_cr_crypt.h
src/license_managers/: CMakeLists.txt
src/license_managers/include/: mlle_license_manager.h
src/license_managers/testingdummy/src/: CMakeLists.txt  mlle_license_manager.c
src/lve/: lve.c  mlle_lve.c  mlle_lve.h  mlle_lve_config.h  mlle_lve_feature.c  mlle_lve_feature.h  mlle_lve_file.c  mlle_lve_file.h  mlle_lve_libpath.c  mlle_lve_libpath.h  mlle_lve_license.c  mlle_lve_license.h  mlle_lve_pubkey.c  mlle_lve_pubkey.h  mlle_lve_tools.c  mlle_lve_tools.h  mlle_protocol_lve_state.c  mlle_protocol_lve_state.h  mlle_ssl_lve.c  mlle_ssl_lve.h
src/obfuscators/: CMakeLists.txt
src/obfuscators/dummy/src/: CMakeLists.txt  obfuscator.c
src/obfuscators/include/: obfuscator.h
src/openssl/: CMakeLists.txt
src/openssl/default/: CMakeLists.txt
src/packagetool/: ReadMe.txt  arguments.c  arguments.h  manifest.c  manifest.h  packagetool.c  run_all_args.bat  run_all_args_linux.bat  run_minimum_args.bat  run_minimum_args_linux.bat  utils.c  utils.h
src/tests/: CMakeLists.txt  ReadMe.txt  private_key_lve.c  private_key_lve.h  private_key_tool.c  private_key_tool.h  public_key_tool.c  public_key_tool.h  test.mo  test.moc  test_commands.c  test_main.c  test_ssl.c  test_tokens.c  test_tool.c  test_tool.h  test_tool.mk
src/tests/test_library/: package.in  package.mo
src/tests/test_library/Module/: package.mo  package.order  testInPackage.mo  testLongName_01_567890_02_567890_03_567890_04_567890_05_567890_06_567890_07_567890_08_567890_09_567890_10_567890_11_567890_12_567890_13_567890_14_567890_15_567890.mo
src/tests/test_library/Resources/: test.py
src/tests/testfiles/: test.mo
src/tool/: mlle_licensing.c  mlle_licensing.h  mlle_spawn.h  mlle_spawn_posix.c  mlle_spawn_windows.c  mlle_ssl_tool.c  mlle_ssl_tool.h  mlle_types.h
src/zip/: CMakeLists.txt
tools/SDK/: LibraryEncryption_installer.nsi  ReadMe.txt
